# pvr.puzzle.tv

./: .gitignore  CMakeLists.txt  README.md  proj-options-config.txt
cmake/: FindCURL.cmake  FindTAR.cmake  FindZLIB.cmake
debian/: changelog.in  control  copyright  kodi-pvr-iptvsimple.install  kodi-pvr-puzzletv.install  rules
depends/android/curl/: flags.txt
depends/android/prebuilt/: curl.txt
depends/common/expat/: expat.txt  flags.txt
depends/common/p8-platform/: p8-platform.txt
depends/common/rapidjson/: flags.txt  rapidjson.txt
depends/ios/prebuilt/: curl.txt
depends/linux/curl/: curl.txt  flags.txt
depends/linux/prebuilt/: curl.txt
depends/osx/prebuilt/: curl.txt  libtar.txt
depends/windows/: flags.txt
depends/windows/prebuilt/: curl.txt
prebuilt/linux/curl/: CMakeLists.txt
prebuilt/osx/curl/: CMakeLists.txt
pvr.puzzle.tv/: addon.xml  addon.xml.in  changelog.txt
pvr.puzzle.tv.xcodeproj/: project.pbxproj
pvr.puzzle.tv.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pvr.puzzle.tv.xcodeproj/xcshareddata/xcschemes/: pvr..puzzle.tv.xcscheme
pvr.puzzle.tv/resources/: settings.xml
pvr.puzzle.tv/resources/language/resource.language.en_gb/: strings.po
pvr.puzzle.tv/resources/language/resource.language.en_us/: strings.po
pvr.puzzle.tv/resources/language/resource.language.ru_ru/: strings.po
src/: ActionQueue.cpp  ActionQueue.hpp  ActionQueueTypes.hpp  HttpEngine.cpp  HttpEngine.hpp  JsonSaxHandler.h  Player.cpp  Player.hpp  Playlist.cpp  Playlist.hpp  Speedometer.h  TimersEngine.cpp  TimersEngine.hpp  XMLTV_loader.cpp  XMLTV_loader.hpp  XmlSaxHandler.h  addon.cpp  addon.h  addon_settings.h  cache_buffer.h  client_core_base.cpp  client_core_base.hpp  direct_buffer.cpp  direct_buffer.h  edem_player.cpp  edem_player.h  edem_pvr_client.cpp  edem_pvr_client.h  file_cache_buffer.cpp  file_cache_buffer.hpp  globals.cpp  globals.hpp  guid.cpp  guid.hpp  helpers.cpp  helpers.h  httplib.h  input_buffer.h  memory_cache_buffer.cpp  memory_cache_buffer.hpp  (+34 more)
